# Advent-of-code

./: .gitignore  .swn  .swo  .swp  README.md  gitignore  handle.py  languages_for_2022  package-lock.json  package.json  possible_languages.md
2022/: README.md
aoc/: Cargo.toml
aoc/benches/: benches.rs
aoc/benches/year_2015/: day01.rs
aoc/data/: script.sh
aoc/data/year_2015/day06/: test_input.txt
aoc/data/year_2015/day14/: test_input0.txt
aoc/data/year_2016/day24/: test_input.txt
aoc/data/year_2017/day10/: test_input.txt
aoc/data/year_2017/day21/: test_input0.txt
aoc/src/: helpers.rs  lib.rs  main.rs
aoc/src/helpers/: aoc_day.rs  mod.rs  path.rs  solution.rs
aoc/src/year_2015/: day02.rs  day03.rs  day17.rs
aoc/src/year_2016/: day02.rs  day04.rs  day05.rs  day06.rs  day07.rs  day12.rs  day13.rs  day19.rs  day23.rs
aoc/src/year_2017/: day02.rs  day05.rs  day06.rs  day08.rs  day10.rs  day13.rs  day16.rs  day17.rs  day20.rs  day24.rs  day25.rs
aoc/src/year_2018/: day13.rs  day20.rs  day21.rs
aoc/src/year_2019/: day13.rs  day15.rs  day18.rs  day19.rs  day20.rs  mod.rs
aoc/src/year_2020/: day22.rs
aoc/src/year_2021/: day03.rs  day06.rs  day07.rs  day09.rs  day19.rs  day20.rs  day21.rs  day22.rs
aoc/src/year_2022/: day18.rs  day19.rs  day20.rs  day21.rs  day23.rs
aoc/templates/: day_test.rs
aoc/tests/: tests.rs
aoc/tests/year_2015/: day01.rs  day08.rs  day09.rs  day19.rs  mod.rs
aoc/tests/year_2017/: day09.rs  day12.rs  day18.rs
current_day/: .aoc_data
rust/: Cargo.toml  README.md  new_day.sh
unfinished_days/: unfinished_days.md
(+668 files in other folders)
