[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Toussaint <antoine.toussaint2002@gmail.com>"]
description = "Solution scripts for the [Advent of code](https://adventofcode.com/) challenges."
repository = "https://github.com/x0000000001/Advent-of-code.git"
keywords = ["advent-of-code", "rust", "algorithmic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
phf = { version = "0.11.2", features = ["macros"] }
md5 = "0.7.0"
colorize = "0.1.0"
itertools = {}
num-integer = "0.1.45"                              # for 2019_12
